--- a/tables.html
+++ b/tables.html
@@ -1,7 +1,17 @@
-<!DOCTYPE html>
+<!DOC solidTYPE html>
 <html>
     <head>
         <title>Test Table</title>
+        <style>
+            table{
+                border: darkgreen solid;
+                border-collapse: collapse;
+            }
+            th,td{
+                border: red solid;
+            }
+          
+        </style>
     </head>
     <body>
         <table>
